overflow fixed

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html {
   /* 10px / 16px = 0.625 = 62.5% */
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
+  overflow-x: hidden;
 
   /* Does NOT work on Safari */
   /* scroll-behavior: smooth; */
@@ -25,6 +26,7 @@ body {
   font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
+  overflow-x: hidden;
 }
 
 .center {
